# remote-debugging

./: docker-compose.yml  main.py  pyproject.toml  remote_debugging.code-workspace  requirements.txt
.devcontainer/: devcontainer.json
libs/test/: test_divide.py
modules/test/: test_multiply.py
projects/project_a/: project_a.code-workspace  pyproject.toml
projects/project_a/config/: config.json
projects/project_a/src/: main.py
projects/project_a/src/test/: test_minus.py
projects/project_b/: project_b.code-workspace
projects/project_b/src/: main.py
projects/project_b/src/test/: test_power.py
projects/project_c/: project_c.code-workspace  pyproject.toml
projects/project_c/src/: main.py
